--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,6 @@
     "tests"
   ],
   "devDependencies": {
-    "jquery": "~2.1.4",
-    "Materialize": "materialize#~0.97.3"
+    "jquery": "~2.1.4"
   }
 }
