--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "start": "http-server ./examples -o -c-1 -S -C ./ssl/server.crt -K ./ssl/server.pem -p 2223"
+    "start": "http-server ./examples -o -c-1 -p 2223"
   },
   "repository": {
     "type": "git",
