--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Training.jQuery",
+  "name": "web-development-season-2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,21 +10,25 @@
     "start": "http-server ./examples -o -c-1 -p 2223",
     "server2": "http-server ./examples -o -c-1 -p 2224"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mrdulin/Training.jQuery.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mrdulin/Training.jQuery/issues"
-  },
-  "homepage": "https://github.com/mrdulin/Training.jQuery#readme",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "http-server": "^0.10.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.10.0",
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
